--- a/UserInformation/app/src/main/res/drawable/ic_lock.xml
+++ b/UserInformation/app/src/main/res/drawable/ic_lock.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android">
-
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FF616161"
+        android:pathData="M12,17c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1 -1,0.45 -1,1 0.45,1 1,1zm6,-7h-1V7c0,-2.21 -1.79,-4 -4,-4s-4,1.79 -4,4v3H6c-1.1,0 -2,0.9 -2,2v8c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2v-8c0,-1.1 -0.9,-2 -2,-2zm-6,-5c1.65,0 3,1.35 3,3v3h-6V7c0,-1.65 1.35,-3 3,-3zm6,15H6v-8h12v8z"/>
 </vector>
